Alumni page style fix when bio too long
- Stretch the rest of the cards to match the height of the highest
- Inside the stretched cards, stretch the header and bio part to account
for the added space

--- a/src/components/MemberCard.module.css
+++ b/src/components/MemberCard.module.css
@@ -15,6 +15,7 @@
   padding: 30px 20px 10px 20px;
   display: block;
   text-align: center;
+  flex-grow: 2;
 }
 
 .card .header .name {
@@ -50,6 +51,7 @@
   display: block;
   color: #333333;
   text-align: center;
+  flex-grow: 1;
 }
 
 .card .links {
