--- a/src/components/Members.module.css
+++ b/src/components/Members.module.css
@@ -1,7 +1,7 @@
 .alumnusContainer {
   -webkit-box-align: center;
   -ms-flex-align: center;
-  align-items: center;
+  align-items: stretch;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
